--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97fd8f">  <td>22/08/11 11:52:04</td>   <td>0</td> <td title="&gt;&gt;BaseAPIClass.bsConfig()[pri:0, instance:BasicCrudOperations.CreateAndValidateInDB@eb21112]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1218593486</td>   <td></td> </tr>
-<tr bgcolor="fed1b6">  <td>22/08/11 11:52:04</td>   <td>491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAndValidateInDB.createAndValidateInDB()[pri:0, instance:BasicCrudOperations.CreateAndValidateInDB@eb21112]">createAndValidateInDB</td> 
-  <td>main@1218593486</td>   <td></td> </tr>
-<tr bgcolor="97fd8f">  <td>22/08/11 11:52:06</td>   <td>2292</td> <td title="&lt;&lt;BaseAPIClass.asConfig()[pri:0, instance:BasicCrudOperations.CreateAndValidateInDB@eb21112]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1218593486</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>22/09/06 22:31:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Oauth2_0.oauth2_0()[pri:0, instance:Authentication.Oauth2_0@757942a1]">oauth2_0</td> 
+  <td>main@1487470647</td>   <td></td> </tr>
 </table>
