--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,4 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>========connection successful=======</td></tr>
-<tr><td>TY_PROJ_3004</td></tr>
-<tr><td>======connection closed========</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
